configurando JavaFX